# odgs-databricks-bridge

./: CHANGELOG.md  README.md  pyproject.toml
examples/marketplace-demo/: README.md  build_and_enforce.py  jwks_server.py  mock_unity_catalog.py  run_seg3_databricks.sh  seg3_databricks_output.txt  sync_from_databricks.py
examples/marketplace-demo/rows/: transactions_bad.json  transactions_ok.json
src/odgs_databricks/: __init__.py  bridge.py  cli.py  client.py  transformer.py
tests/: test_cli.py  test_client.py  test_transformer.py
