[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odgs-databricks-bridge"
version = "0.2.0"
description = "Bridge: Databricks Unity Catalog → ODGS Runtime Enforcement Schemas"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Metric Provenance", email = "partner@metricprovenance.com"}]
keywords = ["data-governance", "databricks", "unity-catalog", "odgs", "eu-ai-act", "compliance", "bridge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "odgs>=5.0.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
sdk = ["databricks-sdk>=0.20.0"]
dev = ["pytest>=7.0", "pytest-mock>=3.10", "responses>=0.23"]

[project.urls]
Homepage = "https://metricprovenance.com"
Repository = "https://github.com/MetricProvenance/odgs-databricks-bridge"
Documentation = "https://github.com/MetricProvenance/odgs-databricks-bridge#readme"

[project.scripts]
odgs-databricks = "odgs_databricks.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/odgs_databricks"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
