[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odgs-databricks-bridge"
version = "0.4.3"
description = "Bridge: Databricks Unity Catalog → ODGS Runtime Enforcement Schemas"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Metric Provenance", email = "partner@metricprovenance.com"}]
keywords = ["data-governance", "databricks", "unity-catalog", "odgs", "eu-ai-act", "compliance", "bridge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "requests>=2.28.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.10", "responses>=0.23"]

[project.urls]
Homepage = "https://metricprovenance.com"
Repository = "https://github.com/MetricProvenance/odgs-databricks-bridge"
Documentation = "https://github.com/MetricProvenance/odgs-databricks-bridge#readme"
Changelog = "https://github.com/MetricProvenance/odgs-databricks-bridge/blob/main/CHANGELOG.md"
Issues = "https://github.com/MetricProvenance/odgs-databricks-bridge/issues"
"Sovereign Registry" = "https://registry.metricprovenance.com"
"ODGS Core" = "https://pypi.org/project/odgs/"

[project.scripts]
odgs-databricks = "odgs_databricks.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/odgs_databricks"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
# The marketplace-demo video/poster stay in the repo (GitHub README + marketplace
# listing links need them) but are excluded from the published sdist — pure bloat
# for anyone running `pip install`, no runtime value. *.pdf is a defensive glob
# (no PDF currently in the repo, but kept in case a vendor doc gets added again).
exclude = [
    "*.pdf",
    "examples/marketplace-demo/*.mp4",
    "examples/marketplace-demo/*.jpg",
    "examples/marketplace-demo/*.png",
]
